applications/scratch-0966079/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-0966079
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-0966079

  template:
    metadata:
      labels:
        app: scratch-0966079

    spec:
      containers:
      - name: scratch-0966079
        image: scratch:latest

        ports:
        - containerPort: 80
