applications/scratch-0966079/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-0966079
  namespace: scratch

spec:
  selector:
    app: scratch-0966079

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
