applications/scratch-0966079/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-0966079
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-0966079.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-0966079

            port:
              number: 80
